--- a/public/partials/business.html
+++ b/public/partials/business.html
@@ -22,7 +22,7 @@
 
 
 <body>
-    <div ng-controller="businessCtrl" data-ng-init="clearParams()">
+    <div ng-controller="businessCtrl" data-ng-init="actionInit()">
 
     </div>
     <div class="main-page-header">
