--- a/public/partials/gs_footer.html
+++ b/public/partials/gs_footer.html
@@ -50,7 +50,7 @@
 
 				<p class="footer-company-about">
 					<span>宅地建物取引業者</span>
-					北海道知事　空知(3)　第474号
+					<div class="about-txt">北海道知事　空知(3)　第474号</div>
 				</p>
 
 				<!-- <div class="footer-icons">
