--- a/public/partials/gs_home.html
+++ b/public/partials/gs_home.html
@@ -18,8 +18,6 @@
 </head>
 <header>
     <div ng-include src="'partials/gs_header.html'"></div>
-
-
 </header>
 
 <body>
@@ -35,40 +33,40 @@
                 <img src="../R/article3.jpg" title="Happy trees">
             </div>
         </div>
-
     </div>
-
-    <div class="home-main-body" ng-controller="GsHomeCtrl">
+    <div class="home-main-body">
         <div class="row for-customers">
             <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
             <div class="wrapper col-lg-10 col-md-10 col-sm-10 col-xs-12">
-                    <div id="to-sell">
-                            <div class="img">
-                                <img src="" alt="">
-                            </div>
-                            <div class="inner">
-                                <div class="text">
-                                    <h3>賃貸物件をお探しのお客様</h3>
-                                    <p>親切・丁寧をモットーに、滝川市内を中心としたお部屋探しのお手伝いをしています。 </p>
-                                </div>
-                                <div class="btn-container">
-                                    <p><a target="_blank" href="https://asp.athome.jp/030062/shumokus?direct_search=true&shubetsu=chintai">CLICK</a></p>
-                                </div>
-                            </div>
+                <div id="to-sell">
+                    <div class="img">
+                        <img src="" alt="">
+                    </div>
+                    <div class="inner">
+                        <div class="text">
+                            <h3>賃貸物件をお探しのお客様</h3>
+                            <p>親切・丁寧をモットーに、滝川市内を中心としたお部屋探しのお手伝いをしています。 </p>
                         </div>
-                    <div id="to-buy">
-                            <div class="inner">
-                                <div class="btn-container">
-                                    <p><a href="#!/generalservice/owners">CLICK</a></p>
-                                </div>
-        
-                                <div class="text">
-                                    <h3>賃貸アパート・貸家のオーナー様</h3>
-                                    <p>滝川市内を中心に、入居者への様々な対応を含めオーナー様に代わり、きめ細かく物件の管理をいたします。もちろん入居者募集の仲介業務のみも承っております。 </p>
-                                </div>
-        
-                            </div>
+                        <div class="btn-container">
+                            <p>
+                                <a target="_blank" href="https://asp.athome.jp/030062/shumokus?direct_search=true&shubetsu=chintai">CLICK</a>
+                            </p>
                         </div>
+                    </div>
+                </div>
+                <div id="to-buy">
+                    <div class="inner">
+                        <div class="btn-container">
+                            <p>
+                                <a href="#!/generalservice/owners">CLICK</a>
+                            </p>
+                        </div>
+                        <div class="text">
+                            <h3>賃貸アパート・貸家のオーナー様</h3>
+                            <p>滝川市内を中心に、入居者への様々な対応を含めオーナー様に代わり、きめ細かく物件の管理をいたします。もちろん入居者募集の仲介業務のみも承っております。 </p>
+                        </div>
+                    </div>
+                </div>
                 <div id="to-sell">
                     <div class="img">
                         <img src="" alt="">
@@ -76,84 +74,109 @@
                     <div class="inner">
                         <div class="text">
                             <h3>物件を売りたいお客様</h3>
-                            <p>滝川市内を中心に、物件売買の仲介を致します。<br>詳しくはお問い合わせください。 </p>
+                            <p>滝川市内を中心に、物件売買の仲介を致します。
+                                <br>詳しくはお問い合わせください。 </p>
                         </div>
                         <div class="btn-container">
-                            <p><a target="_blank" href="#!/generalservice/contact">お問い合わせ</a></p>
+                            <p>
+                                <a href="#!/generalservice/contact">お問い合わせ</a>
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div id="to-buy">
                     <div class="inner">
                         <div class="btn-container">
-                            <p><a href="https://asp.athome.jp/030062/shumokus?direct_search=true&shubetsu=baibai">CLICK</a></p>
+                            <p>
+                                <a target="_blank" href="https://asp.athome.jp/030062/shumokus?direct_search=true&shubetsu=baibai">CLICK</a>
+                            </p>
                         </div>
 
                         <div class="text">
                             <h3>物件を買いたいお客様</h3>
                             <p>滝川市内を中心に物件売買の仲介を致します。 </p>
                         </div>
-
                     </div>
                 </div>
-
             </div>
             <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
-
         </div>
         <div class="row gs-mission">
-            <div class="left col-lg-5 col-md-5 col-sm-5 col-xs-10
-                        col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
-                <h2>
-                    谷口総合サービスとは・・・
-                    <div id="custom-border"></div>
-                </h2>
-                <p class="darker">It is a long established fact that a reader will be distracted by the readable content of a page when looking
-                    at its layout. The point of using Lorem Ipsum is that it has a more or less normal distribution of letters,
-                    as opposed to using Content here content here making it look like redable English.
-
-                </p>
-                <p>
-                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                    The point of using Lorem Ipsum is that it has a more or less normal distribution of letters, as opposed
-                    to using Content here content here making it look like redable English.
-
-                </p>
-                <p>
-                    The point of using Lorem Ipsum is that it has a more or less normal distribution of letters, as opposed to using Content
-                    here content here making it look like redable English.
-
-                </p>
-            </div>
-            <div class="right col-lg-5 col-md-5 col-sm-5 col-xs-10
-                col-xs-offset-1 col-sm-offset-1 col-md-offset-0 col-lg-offset-0">
+            <div class="right col-lg-10 col-md-10 col-sm-10 col-xs-12
+                col-xs-offset-0 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
                 <div class="row">
-                    <div class="column-1 col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                        <img class="h-img" src="../R/gs_home/Apartment1.png" alt="">
-                        <img class="h-img" src="../R/gs_home/apartment_2.png" alt="">
+                    <div class="column-1 col-lg-4 col-md-3 col-sm-3 col-xs-6">
+                        <div>
+                            <img class="h-img" src="../R/gs_home/Officeentrance.jpg" alt="">
+                            <div class="desc">お気軽にお入り下さい。</div>
+                        </div>
                     </div>
-                    <div class="column-2 col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                        <img class="h-img" src="../R/gs_home/apartment_1.png" alt="">
-                        <img class="h-img" src="../R/gs_home/apartment_blossom.jpg" alt="">
+                    <div class="column-1 col-lg-2 col-md-3 col-sm-3 col-xs-6">
+                        <div>
+                            <img class="h-img" src="../R/gs_home/office_closeup.jpg" alt="">
+                            <div class="desc">“いつもキレイにしてますね”
+                                <br> と皆さまにお褒めいただきます。
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column-2 col-lg-3 col-md-3 col-sm-3 col-xs-6">
+                        <div>
+                            <img class="h-img" src="../R/gs_home/Apartment_1.png" alt="">
+                            <div class="desc">description</div>
+                        </div>
+                    </div>
+                    <div class="column-2 col-lg-3 col-md-3 col-sm-3 col-xs-6">
+                        <div>
+                            <img class="h-img" src="../R/gs_home/apartment_2.png" alt="">
+                            <div class="desc">description</div>
+                        </div>
                     </div>
                 </div>
+            </div>
+        </div>
 
+        <div class="row" ng-controller="gsNewsCtrl">
+            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 
+            col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
+            <div class="__wrapper">
+                    <div class="news-title">
+                            NEWS
+                        </div>
+                    <div class="row">
+                        <div class="col-lg-6" ng-repeat="news in newsList">
+                                <div class="news-card" >
+                                        <div class="icon">
+                                            <img src="">
+                                        </div>
+                                        <div>
+                                            <div class="date">
+                                                {{news.daymonth}}
+                                            </div>
+                                            <div class="content">
+                                                {{news.title}}
+                                            </div>
+                                        </div>
+                    
+                                    </div>
+        
+                        </div>
+        
+                    </div>
+            </div>
+
+     
             </div>
         </div>
     </div>
-
-
     <footer>
-        <div ng-include src="'partials/gs_footer.html'"></div>
+        <div ng-include="'partials/gs_footer.html'"></div>
     </footer>
-
     <script>
         $(document).ready(() => {
             var hash = window.location.hash;
             console.log(window.location.hash);
             $('.nav > li > a[href="' + hash + '"]').parent().addClass('active');
         });
-
     </script>
     <script>
         $(() => {
