--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -128,30 +128,8 @@
 
             <div class="row" style="padding: 0px; padding-top: 10px;">
                 <div class="col-lg-10 col-md-10 col-xs-12 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-0" style="padding: 0px;">
-                    <div class="col-xs-12 col-md-6 col-lg-6 col-sm-6" style="padding-right: 0px; padding-left: 0px;">
-
-                        <div class="about-content">
-
-                            <div class="about-content left">
-                                <p>There are many variations passages of Lorem Ipsum available, but the majority have suffered
-                                    alteration in some form by injected humour or randomissed words which don't look even
-                                    slightly belieavable if you are going to use a passage of Lorem Ipsum you need to be
-                                    sure there isnt anything embarrasing hidden in the middle of text</p>
-
-                                <p>If you are going to use a passage of Lorem Ipsum you need to be sure there isnt anything
-                                    embarrasing hidden in the middle of text</p>
-
-                                <p>There are many variations passages of Lorem Ipsum available, but the majority have suffered
-                                    alteration in some form by injected humour or randomissed words which don't look even
-                                    slightly belieavable </p>
-
-                            </div>
-
-
-                        </div>
-
-                    </div>
-                    <div class="col-xs-12 col-md-6 col-lg-6 col-sm-6" style="padding-right: 0px; padding-left: 0px;">
+            
+                    <div class="col-xs-12 col-md-12 col-lg-10 col-sm-12 col-lg-offset-1 col-md-offset-0 col-sm-offset-0 col-xs-offset-0">
 
                         <div class="about-content">
 
