--- a/public/partials/mp_footer.html
+++ b/public/partials/mp_footer.html
@@ -43,10 +43,10 @@
                             <a href="#!/company">会社概要</a>
                         </li>
                         <li>
-                            <a>お問い合わせ</a>
+                            <a href="#!/metalplatehome#mp-contact" ng-click="scrollTo('mp-contact')">お問い合わせ</a>
                         </li>
                         <li>
-                            <a class="num">NEWS</a>
+                            <a class="num" href="#!/metalplatehome#mp-news" ng-click="scrollTo('mp-news')">NEWS</a>
                         </li>
 
                     </ul>
