--- a/public/partials/mp_header.html
+++ b/public/partials/mp_header.html
@@ -98,7 +98,7 @@
                             <a href="#!/company">会社概要</a>
                         </li>
                         <li>
-                            <a class="news-link" ng-click="scrollTo('mp-news')">ニュース</a>
+                            <a class="news-link" href="#!/metalplatehome#mp-news" ng-click="scrollTo('mp-news')">ニュース</a>
                         </li>
                     </ul>
                 </div>
