--- a/public/CSS/article_box.css
+++ b/public/CSS/article_box.css
@@ -32,7 +32,7 @@
     color: #717171;
     overflow: hidden;
     text-align: start;
-    font-family: mplusregular;
+    font-family: Meiryo;
     font-size: 18px;
 }
 
@@ -117,11 +117,11 @@
 }
 
 #myModal .bx-wrapper .bx-caption span{
-    font-family: mplusregular;
+    font-family: Meiryo;
 }
 
 #myModal .btn{
-    font-family: mplusregular;
+    font-family: Meiryo;
 }
 
 @media screen and (max-width: 768px){
