--- a/public/CSS/footer.css
+++ b/public/CSS/footer.css
@@ -123,7 +123,7 @@ footer {
         }
        .widget h2 { 
            border-bottom:1px solid #ddd;
-           font-family: mplusregular;
+           font-family: Meiryo;
            font-size: 1.8rem;
         }   
        .widget h2:after {
