--- a/public/CSS/generalServiceStyles/gs_menu_styles.css
+++ b/public/CSS/generalServiceStyles/gs_menu_styles.css
@@ -93,7 +93,7 @@
 }
 
 .navbar-default .navbar-nav>li>a{
-  font-family: mplusregular;
+  font-family: Meiryo;
 }
 
 .navbar-default .navbar-brand img{
