--- a/public/CSS/generalServiceStyles/gs_owners_styles.css
+++ b/public/CSS/generalServiceStyles/gs_owners_styles.css
@@ -14,7 +14,7 @@
     color: white;
     margin: 0 auto;
     font-size: 3.3em;
-    font-family: mplusregular;
+    font-family: Meiryo;
 }
 
 body .owners-main-body .row{
