--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -16,8 +16,18 @@ body a{
 	-moz-transition:0.5s all;
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
-	background:#011D4A!mportant;
 }
+
+/* edited styles */
+.table-hover>tbody>tr:hover{
+    background-color: red;
+}
+
+.article-content{
+    max-width: 100px;
+}
+
+/*  */
 a:focus, a:active, a:hover ,a.dropdown-toggle{
     outline: none;
     -webkit-transition: all 0.3s;
