--- a/public/partials/company.html
+++ b/public/partials/company.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="../CSS/main.css" type="text/css">
     <link rel="stylesheet" href="../CSS/company_styles.css" type="text/css">
     <link rel="stylesheet" href="../CSS/metalPlateStyles/mp_header_styles.css" />
-    <link rel="stylesheet" href="../CSS/jquery.mThumbnailScroller.css" type="text/css">
     <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700" rel="stylesheet">
-    <script src="../scripts/jquery.mThumbnailScroller.js" type="text/javascript"></script>
 </head>
 <header>
 
@@ -22,6 +20,10 @@
 
 
 <body>
+
+    <div ng-controller="mpCompanyCtrl" data-ng-init="actionInit()">
+
+    </div>
 
     <div class="main-page-header">
         <div class="wrapper">
@@ -50,7 +52,7 @@
             </div>
         </div>
 
-        <div class="address-container">
+        <div class="address-container" >
             <div class="row">
                 <div class="col-lg-8 col-md-10 col-sm-10 col-xs-10
                 col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-2" style="padding: 0px;">
