--- a/public/partials/gs_header.html
+++ b/public/partials/gs_header.html
@@ -1,16 +1,22 @@
 <div class="row top-info">
-    <div class="top-description col-lg-5 col-md-5 col-sm-5 col-xs-10
+    <div class="top-description col-lg-5 col-md-4 col-sm-5 col-xs-10
     col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
         有限会社谷口総合サービスは、不動産を専門とする会社です。
     </div>
-    <div class="right-container col-lg-5 col-md-5 col-sm-5 col-xs-10
+    <div class="right-container col-lg-5 col-md-6 col-sm-5 col-xs-10
     col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
         <div ng-controller="gsHeaderController" class="row rc-row">
             <div class="info-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <img ng-click="openNewTabLoc()" src="../R/icons/location-blue.svg" alt="location" />
                 <div class="divider"></div>
-                <p class="right-text">北海道滝川市本町2丁目3番5号
-                    <br>073-0021 TSビル 1F</p>
+                <div class="right-text">
+                    <div class="top">
+                            北海道滝川市本町2丁目3番5号
+                    </div>
+                    <div class="bottom">
+                            073-0021 TSビル 1F
+                    </div>
+            </div>
             </div>
 
             <div class="info-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -48,7 +54,7 @@
                             <a style="background: transparent;" href="#!/generalservice/home">トップページ</a>
                         </li>
                         <li class="menu-item">
-                            <a style="background: transparent;" href="#!/generalservice/owners">会社概要</a>
+                            <a style="background: transparent;" href="#!/generalservice/company">会社概要</a>
                         </li>
                         <li class="menu-item">
                             <a style="background: transparent;" href="#!/generalservice/contact">お問い合わせ
